<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_shopping_cart"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="10"
        android:title="@string/cntact"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_favv"
        android:orderInCategory="20"
        android:title="@string/favorites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_fav"/>
    <item
        android:id="@+id/action_status"
        android:title="@string/status"
        android:orderInCategory="30"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_status"/>
</menu>